[FIX] Collapsed sidebar footer layout

--- a/src/assets/scss/framework/base/sidebar/left/_sidebar.scss
+++ b/src/assets/scss/framework/base/sidebar/left/_sidebar.scss
@@ -121,14 +121,14 @@
         .sidebar-footer {
             padding-right: .5rem;
             padding-left: .5rem;
-
+            font-size: 0.6rem;
             .ion-md-musical-note {
                 display: block;
             }
 
-            span {
-                display: none;
-            }
+            // span {
+            //     display: none;
+            // }
         }
     }
 }
