--- a/src/assets/scss/framework/components/_kofi.scss
+++ b/src/assets/scss/framework/components/_kofi.scss
@@ -9,7 +9,6 @@ img.kofiimg{
     margin-top:0;
     margin-right:5px!important;
     margin-left:0!important;
-    margin-bottom:3px!important;
     content:url('https://storage.ko-fi.com/cdn/cup-border.png')
 }
 
@@ -92,7 +91,7 @@ a.kofi-button:active {
 	text-decoration: none !important
 }
 
-.kofitext img.kofiimg {
+img.kofiimg {
 	height: 15px!important;
 	width: 22px!important;
 	display: initial;
@@ -126,5 +125,21 @@ a.kofi-button:active {
 	}
 	100% {
 		transform: rotate(0) scale(1)
+	}
+}
+
+.iconic-sidebar .kofi-container{
+	min-width: 0;
+
+	.kofi-button{
+		min-width: 0;
+	}
+
+	.kofiimg{
+		margin-right: 0 !important;
+	}
+
+	.kofitext{
+		display: none;
 	}
 }
